Общие добавления/исправления
1. Переработан модуль motor.c. Изменена логика автоматического отключения/сброса оценивателя и ПИ-регулятора. Дополнена логика работы оценивателя. Исправлена алгоритмическая ошибка ПИ-регулятора. Переработна логика задатчика режимов двигателей __motor_set_thrust. Переработана логика армирования/дизармирования двигателей.
2. Чтение показаний потенциометра оформлено в функцию в md3.c
3. Реализована простейшая система команд в uart.c
4. Дополнена логика функции удаления задачи rtos_delete_task
5. Реализована демонстрационная версия блока управления движением motion_control.c
6. Мелкие исправления

--- a/GenericATmega128test/Debug/Makefile
+++ b/GenericATmega128test/Debug/Makefile
@@ -51,6 +51,7 @@ C_SRCS +=  \
 ../modules/md3.c \
 ../modules/motor.c \
 ../modules/mpu6050.c \
+../motion_control.c \
 ../rtos.c
 
 
@@ -72,6 +73,7 @@ modules/bmp180.o \
 modules/md3.o \
 modules/motor.o \
 modules/mpu6050.o \
+motion_control.o \
 rtos.o
 
 OBJS_AS_ARGS +=  \
@@ -86,6 +88,7 @@ modules/bmp180.o \
 modules/md3.o \
 modules/motor.o \
 modules/mpu6050.o \
+motion_control.o \
 rtos.o
 
 C_DEPS +=  \
@@ -100,6 +103,7 @@ modules/bmp180.d \
 modules/md3.d \
 modules/motor.d \
 modules/mpu6050.d \
+motion_control.d \
 rtos.d
 
 C_DEPS_AS_ARGS +=  \
@@ -114,6 +118,7 @@ modules/bmp180.d \
 modules/md3.d \
 modules/motor.d \
 modules/mpu6050.d \
+motion_control.d \
 rtos.d
 
 OUTPUT_FILE_PATH +=GenericATmega128test.elf
@@ -130,6 +135,8 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+
+
 
 
 
